apps/nas/transmission-old/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-old
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "transmission-old.${domain_absolutist_it:=absolutist.it}"
  - "transmission-old.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: transmission-old
      port: 9091
